--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,17 +20,35 @@ jobs:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    services: # Define Docker containers to use for this job.
+      backend-db: # Container ID for our database container
+        image: postgres:12.1 # Image to pull from Docker Hub
+        env:
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: backend_db
+        ports:
+        - 5432:5432 # TCP port to expose on Docker container and host environment 
+      backend-gcloud-pubsub: # Container ID for our Pub/Sub container
+        image: 'knarz/pubsub-emulator' # Image to pull from Docker Hub
+        ports:
+          - '8085:8085' # TCP port to expose on Docker container and host environment 
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+    - name: Checkout working branch
+      uses: actions/checkout@v1
+      
+    - name: Setup ssh
+      run: |
+        mkdir ~/.ssh/
+        echo "${{ secrets.SSH_PRIVATE_KEY }}" > ~/.ssh/id_rsa
+        chmod 600 ~/.ssh/id_rsa
+        touch ~/.ssh/known_hosts
+        ssh-keyscan github.com >> ~/.ssh/known_hosts        
+    - name: Set up Python 3.8
+      uses: actions/setup-python@v1
+      with:
+        python-version: 3.8
+        
+    - name: Install PostgreSQL 11 client
+      run: |
+        sudo apt-get -yqq install libpq-dev
