--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,3 +52,46 @@ jobs:
     - name: Install PostgreSQL 11 client
       run: |
         sudo apt-get -yqq install libpq-dev
+
+    - name: Cache Poetry
+      uses: actions/cache@v1
+      id: cache
+      with:
+        path: ~/.cache/pip
+        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-pip-
+    - name: Install dependencies, config poetry virtualenv
+      run: |
+        python -m pip install --upgrade pip
+        pip install poetry
+        poetry config virtualenvs.create false
+        poetry install --no-interaction          
+    - name: Lint with flake8
+      run: |
+        # stop the build if there are Python syntax errors or undefined names
+        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
+        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+
+    - name: Install gettext for translations
+      run: |
+        sudo apt-get update && sudo apt-get install -y gettext   
+    - name: Test with pytest
+      run: |
+        python manage.py compilemessages
+        pytest --verbose
+      env:
+        CLUSTER_ENV: test
+        RUN_DEV: 0
+        POSTGRES_DB: backend_db
+        POSTGRES_USER: user
+        POSTGRES_PASSWORD: password
+        POSTGRES_DB_PORT: 5432
+        POSTGRES_DB_HOST: localhost  
+        SECRET_KEY: thisisasecret
+        SENDGRID_API_KEY: 'test-key'
+        PUBSUB_EMULATOR_HOST: localhost:8085
+        GCLOUD_PUBSUB_PROJECT_ID: 'test-project'
+        HERBIE_TOKEN: 'random-key'
+        HERBIE_HOST: 'http://localhost:8000'        
