--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -65,8 +65,8 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install poetry
-        poetry config virtualenvs.create false
-        poetry install --no-interaction          
+ #       poetry config virtualenvs.create false
+ #       poetry install --no-interaction          
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
@@ -95,3 +95,18 @@ jobs:
         GCLOUD_PUBSUB_PROJECT_ID: 'test-project'
         HERBIE_TOKEN: 'random-key'
         HERBIE_HOST: 'http://localhost:8000'        
+
+  docker-image:
+      name: Build & Publish Docker Image
+      needs: [tests]
+      runs-on: ubuntu-latest      
+
+      steps:
+        - name: Checkout working branch
+          uses: actions/checkout@v1
+
+        - name: Set Docker Registry
+          run: echo ::set-env name=DOCKER_REGISTRY::eu.gcr.io
+
+        - name: Set Docker Image
+          run: echo ::set-env name=DOCKER_IMAGE::${{ env.DOCKER_REGISTRY }}/acme-555555/backend    
