--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,7 +64,7 @@ jobs:
     - name: Install dependencies, config poetry virtualenv
       run: |
         python -m pip install --upgrade pip
-        pip install poetry
+#        pip install poetry
  #       poetry config virtualenvs.create false
  #       poetry install --no-interaction          
     - name: Lint with flake8
