--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,9 +64,9 @@ jobs:
     - name: Install dependencies, config poetry virtualenv
       run: |
         python -m pip install --upgrade pip
-#        pip install poetry
- #       poetry config virtualenvs.create false
- #       poetry install --no-interaction          
+        pip install poetry=1.1.4
+        poetry config virtualenvs.create false
+        poetry install --no-interaction          
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
