--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -53,14 +53,14 @@ jobs:
       run: |
         sudo apt-get -yqq install libpq-dev
 
-    - name: Cache Poetry
-      uses: actions/cache@v1
-      id: cache
-      with:
-        path: ~/.cache/pip
-        key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
-        restore-keys: |
-          ${{ runner.os }}-pip-
+    # - name: Cache Poetry
+    #   uses: actions/cache@v1
+    #   id: cache
+    #   with:
+    #     path: ~/.cache/pip
+    #     key: ${{ runner.os }}-pip-${{ hashFiles('**/poetry.lock') }}
+    #     restore-keys: |
+    #       ${{ runner.os }}-pip-
     - name: Install dependencies, config poetry virtualenv
       run: |
         python -m pip install --upgrade pip
